--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_URL_GRAPHQL=http://larave-template-vue-qraphql/graphql
+
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
