--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "name": "template-laravel-spa-vue-qraphql-vuetify",
     "private": true,
     "scripts": {
         "dev": "npm run development",
@@ -10,25 +11,29 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@pp-spaces/laravel-mix-graphql": "^0.0.3",
         "axios": "^0.21",
-        "bootstrap": "^4.0.0",
-        "deepmerge": "^4.2.2",
-        "fibers": "^5.0.0",
-        "jquery": "^3.2",
+        "css-loader": "^5.2.1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "popper.js": "^1.12",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.32.8",
-        "sass-loader": "^11.0.1",
-        "vue-loader": "15.9.5",
-        "vue-template-compiler": "^2.6.10"
+        "vue-loader": "^15.9.6",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@mdi/font": "^5.9.55",
+        "apollo-cache-inmemory": "^1.6.6",
+        "apollo-client": "^2.6.10",
+        "apollo-link": "^1.2.14",
+        "apollo-link-http": "^1.5.17",
+        "dotenv": "^8.2.0",
+        "graphql": "^15.5.0",
+        "graphql-tag": "^2.11.0",
         "vue": "^2.6.12",
+        "vue-apollo": "^3.0.7",
         "vue-router": "^3.5.1",
         "vuetify": "^2.4.9",
-        "vuex": "^3.6.2"
+        "vuex": "^3.6.2",
+        "webpack": "^5.31.2"
     }
 }
