--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     },
     "devDependencies": {
         "@pp-spaces/laravel-mix-graphql": "^0.0.3",
+        "autoprefixer": "^10.2.5",
         "axios": "^0.21",
         "css-loader": "^5.2.1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.2.10",
+        "tailwindcss": "^2.1.1",
         "vue-loader": "^15.9.6",
-        "vue-template-compiler": "^2.6.12"
+        "vue-template-compiler": "^2.6.12",
+        "webpack-cli": "^4.6.0"
     },
     "dependencies": {
         "@mdi/font": "^5.9.55",
