--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "axios": "^0.21",
         "css-loader": "^5.2.1",
         "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
+        "lodash": "^4.17.21",
         "postcss": "^8.2.10",
         "tailwindcss": "^2.1.1",
         "vue-loader": "^15.9.6",
@@ -32,6 +32,7 @@
         "dotenv": "^8.2.0",
         "graphql": "^15.5.0",
         "graphql-tag": "^2.11.0",
+        "marked": "^2.0.3",
         "vue": "^2.6.12",
         "vue-apollo": "^3.0.7",
         "vue-router": "^3.5.1",
