--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
         "dotenv": "^8.2.0",
         "graphql": "^15.5.0",
         "graphql-tag": "^2.11.0",
+        "luxon": "^1.26.0",
         "marked": "^2.0.3",
+        "sass": "^1.32.8",
+        "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
         "vue-apollo": "^3.0.7",
         "vue-router": "^3.5.1",
