--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
         "vue-apollo": "^3.0.7",
+        "vue-d3-charts": "^0.2.8",
         "vue-router": "^3.5.1",
         "vuetify": "^2.4.9",
         "vuex": "^3.6.2",
