--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "webpack-cli": "^4.6.0"
     },
     "dependencies": {
+        "@jamescoyle/vue-icon": "^0.1.0",
         "@mdi/font": "^5.9.55",
+        "@mdi/js": "^5.9.55",
         "apollo-cache-inmemory": "^1.6.6",
         "apollo-client": "^2.6.10",
         "apollo-link": "^1.2.14",
